# chigraph

./: .appveyor.yml  .clang-format  .clang-tidy  .doozer.json  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  README.rst  TODO.rst  WORKSPACE  conanfile.py  setup.py  setup.sh  tidy.txt
chi/: .get.cpp.swp  CMakeLists.txt  compile.cpp  get.cpp  get_nop.cpp  init.cpp  interpret.cpp  main.cpp  run.cpp
chi-ctollvm/: CMakeLists.txt  README.md  ctollvm.cpp
chi/CodeSupport/: BUILD.bazel  BitcodeParser.cpp  BitcodeParser.hpp  Fwd.hpp
chi/Core/: BUILD.bazel  CCompiler.cpp  CCompiler.hpp  CMakeLists.txt  ChiModule.cpp  ChiModule.hpp  ClangFinder.cpp  Context.cpp  Context.hpp  ContextTests.cpp  DataType.cpp  DataType.hpp  DefaultModuleCache.cpp  DefaultModuleCache.hpp  FunctionCompiler.cpp  FunctionCompiler.hpp  FunctionValidator.cpp  FunctionValidator.hpp  Fwd.hpp  GraphFunction.cpp  GraphFunction.hpp  GraphFunctionEntryTest.cpp  GraphFunctionExitTest.cpp  GraphFunctionInOutsTest.cpp  GraphFunctionLocalsTest.cpp  GraphModule.cpp  GraphModule.hpp  GraphModuleTest.cpp  GraphStruct.cpp  GraphStruct.hpp  JSONSerializerTests.cpp  JsonDeserializer.cpp  JsonDeserializer.hpp  JsonSerializer.cpp  JsonSerializer.hpp  LangModule.cpp  LangModule.hpp  LangModuleTests.cpp  ModuleCache.hpp  NameMangler.cpp  (+7 more)
chi/Debugger/: BUILD.bazel  Debugger.cpp  Debugger.hpp  DebuggerTests.cpp
chi/Fetcher/: BUILD.bazel  Fetcher.cpp  Fetcher.hpp  FetcherTests.cpp
chi/Runtime/: BUILD.bazel  Runtime.cpp  Runtime.hpp  embed.bzl
chi/Support/: BUILD.bazel  ExecutablePath.cpp  ExecutablePath.hpp  HashFilesystemPath.hpp  LibCLocator.cpp  LibCLocator.hpp  Result.cpp  Result.hpp  ResultTest.cpp  Subprocess.cpp  SubprocessTest.cpp
chig/: .compile.cpp.swp  CMakeLists.txt  compile.cpp  get.cpp  interpret.cpp  main.cpp  run.cpp
chig/src/: ChigModule.cpp  Context.c  Context.cpp  GraphFunction.cpp  ImportedModule.cpp  JsonModule.cpp  LangModule.cpp  Module.c  NodeInstance.cpp  jsonmodule.cpp
chigc/: .Compile.cpp.swp  .main.cpp.swp  CMakeLists.txt  main.cpp
chigc/src/: main.cpp
chigraphgui/: CMakeLists.txt  chigraphfunctiondetailsui.rc  chigraphfunctiontabviewui.rc  chigraphgui.qrc  chigraphguiui.rc  chigraphmodulebrowserui.rc  chigraphnodemodel.cpp  chigraphnodemodel.hpp  chigraphplugin.hpp  execparamlistwidget.cpp  execparamlistwidget.hpp  functiondetails.cpp  functiondetails.hpp  functioninouts.cpp  functioninouts.hpp  functionspane.cpp  functionspane.hpp  functiontabview.cpp  functiontabview.hpp  functionview.cpp  functionview.hpp  launchconfigurationdialog.cpp  launchconfigurationdialog.hpp  launchconfigurationmanager.cpp  launchconfigurationmanager.hpp  localvariables.cpp  localvariables.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  modulebrowser.cpp  modulebrowser.hpp  moduledependencies.cpp  moduledependencies.hpp  moduledetails.cpp  moduledetails.hpp  paramlistwidget.cpp  paramlistwidget.hpp  subprocessoutputview.cpp  subprocessoutputview.hpp  (+2 more)
chigraphgui/debugger/: CMakeLists.txt  breakpoint_view.cpp  breakpoint_view.hpp  breakpointview.cpp  breakpointview.hpp  chigraphdebugger.qrc  chigraphguidebuggerui.rc  currentnodedecorator.hpp  debuggerplugin.cpp  debuggerplugin.hpp  debuggerworkerthread.cpp  debuggerworkerthread.hpp  variableview.cpp  variableview.hpp
cmd/chi/: BUILD.bazel  CMakeLists.txt  compile.cpp  get.cpp  get_nop.cpp  interpret.cpp  main.cpp  run.cpp
doc/: test.ll  (+13 more)
examples/: BUILD.bazel  CMakeLists.txt  ResultExample.cpp  SubprocessExample.cpp
examples/calculator/: AdditionModel.hpp  MultiplicationModel.hpp  NumberSourceDataModel.hpp  SubtractionModel.hpp  main.cpp
examples/example1/: main.cpp
examples/example2/: TextSourceDataModel.hpp
examples/images/: ImageLoaderModel.hpp  ImageShowModel.hpp  main.cpp
examples/simple-data-forwarding/: main.cpp  test_qobjects.cpp  test_qobjects.hpp
gui/: CMakeLists.txt  chiggui.qrc  chigguiui.rc  chignodegui.cpp  chignodegui.hpp  chigraphnodemodel.cpp  chigraphnodemodel.hpp  detailspanel.hpp  execparamlistwidget.cpp  execparamlistwidget.hpp  functiondetails.cpp  functiondetails.hpp  functioninouts.cpp  functioninouts.hpp  functionspane.cpp  functionspane.hpp  functionview.cpp  functionview.hpp  localvariables.cpp  localvariables.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  modulebrowser.cpp  modulebrowser.hpp  moduledependencies.cpp  moduledependencies.hpp  moduledetails.cpp  moduledetails.hpp  outputview.cpp  outputview.hpp  paramlistwidget.cpp  paramlistwidget.hpp  subprocessoutputview.cpp  subprocessoutputview.hpp  thememanager.cpp  thememanager.hpp  typeselector.cpp  typeselector.hpp
lib/chigraphsupport/: CMakeLists.txt
lib/core/: CMakeLists.txt  README.md
lib/debugger/: CMakeLists.txt
lib/fetcher/: CMakeLists.txt
lib/runtime/: CMakeLists.txt  arc.c  main.c
lib/support/: CMakeLists.txt
libchig/: CMakeLists.txt  Config.h.in  Config.hpp.in  README.md
libchig/ctollvm/: CMakeLists.txt  ctollvm.cpp  ctollvm.hpp
libchig/src/: .GraphFunction.cpp.swp  .NodeInstance.cpp.swp  CModule.cpp  ChigModule.cpp  Context.cpp  ExecutablePath.cpp  FunctionCompiler.cpp  FunctionValidator.cpp  Graph.cpp  GraphFunction.cpp  GraphModule.cpp  GraphStruct.cpp  JsonDeserializer.cpp  JsonModule.cpp  JsonSerializer.cpp  LangModule.cpp  NameMangler.cpp  NodeInstance.cpp  Result.cpp  StructType.cpp
libchigdebugger/: CMakeLists.txt
libchigraph/: CMakeLists.txt  README.md
libchigraphdebugger/: CMakeLists.txt
test/: .CMakeLists.txt.swp  .FetchTests.cpp.swp  .JSONSerializer.cpp.swp  BUILD.bazel  CMakeLists.txt  Codegen.cpp  Common.hpp  Context.cpp  ContextTests.cpp  DebuggerTests.cpp  FetchTests.cpp  GraphFunctionEntryTest.cpp  GraphFunctionExitTest.cpp  GraphFunctionInOutsTest.cpp  GraphFunctionLocalsTest.cpp  GraphModuleTest.cpp  JSONReader.cpp  JSONSerializer.cpp  JSONSerializerTests.cpp  LangModule.cpp  LangModuleTests.cpp  LoadUnloadModule.cpp  NameManglerTests.cpp  ResultTest.cpp  SubprocessTest.cpp  SubprocessTesterChild.cpp  TestCommon.hpp  helloworld.chig  main.cpp  test.bc  test.ll
(+3402 files in other folders)
